most of the bugs fixed and sales report excel format download done!!

--- a/views/adminView/reportPage.ejs
+++ b/views/adminView/reportPage.ejs
@@ -37,6 +37,12 @@
                 <label for="endDate" class="form-label">End Date:</label>
                 <input type="date" class="form-control" id="endDate" name="endDate">
                 </div>
+                <div class="mb-3">
+                <label for="pdf" class="form-label">Pdf</label>
+                <input type="radio" value="pdf" name="format" id="pdf" checked>
+                <label for="excel" class="form-label">Excel</label>
+                <input type="radio" value="excel" name="format" id="excel">
+                </div>            
                 <button class="btn btn-success" type="submit">Download Report</button>
             </form>
             </div>
