--- a/views/userView/userOrderHistory.ejs
+++ b/views/userView/userOrderHistory.ejs
@@ -219,7 +219,7 @@
               key: "" + res.key_id + "",
               amount: "" + res.amount + "",
               currency: "INR",
-              name: "getantiques",
+              name: "Finer Threads",
               order_id: "" + res.order_id + "",
               handler: function (response) {
                 console.log("order id is: ", id);
